testsuite/tests/typecheck/should_compile/T17775-viewpats-d.stderr

T17775-viewpats-d.hs:7:11: error:
    • Couldn't match type ‘Bool’ with ‘Eq a => Bool’
      Expected: Int -> Eq a => Bool
        Actual: Int -> Bool
    • In the expression: const (x == y)
      In an equation for ‘ex6’: ex6 x y = const (x == y)
    • Relevant bindings include
        y :: a (bound at T17775-viewpats-d.hs:7:7)
        x :: a (bound at T17775-viewpats-d.hs:7:5)
        ex6 :: a -> a -> Int -> Eq a => Bool
          (bound at T17775-viewpats-d.hs:7:1)
